# ArtifactGate-EDA

./: .gitignore  .zenodo.json  02_EXPERIMENT_CONTRACT.yaml  AGENTS.md  CITATION.cff  Dockerfile  LICENSE  Licence.txt  Makefile  README.md  TODO.md  codemeta.json  environment.yml  pyproject.toml
.codex_workflow/: CALIBRATION_REPORT.md  IST_EXECUTION_STATE.md  SESSION_STATE.md  STAGE_CONTROL_PACKET.md  WORKFLOW_STATE.md
docs/: adapter_authoring.md  api_reference.md  author_submission_metadata_request.md  claim_policy_language.md  cli_reference.md  g13_author_expert_walkthrough_template.md  installation.md  ist_author_external_completion_packet.md  ist_stronger_plan_source_record.md  release_readiness.md  reproducibility.md  schema_reference.md  softwarex_submission_checklist.md  softwarex_submission_notes.md  zenodo_doi_finalization.md
literature/: citation_expansion_log.csv  citation_network_verification.csv  exclusion_log.csv  gap_map.md  literature_matrix.csv  matrix_to_gap_table_crosswalk.csv  search_log.csv  search_protocol.md  source_quality_audit.csv
paper/: MANUSCRIPT_REPRO_PACKAGE.md  declarations.md  highlights.md  manuscript_artifact_manifest.csv  manuscript_ist.md  manuscript_ist.tex  softwarex_manuscript.md  softwarex_manuscript.tex
reports/: COMPLETION_AUDIT.md  GATE_REVIEW.md  IST_CURRENT_OPERATION_AND_EXECUTION_PACKET.md  IST_EXPERIMENT_CONTRACT.md  IST_FINAL_ACCEPTANCE_AUDIT.md  IST_FROZEN_CLAIM_BOUNDARY.md  IST_GAP_AUDIT.md  IST_VERIFICATION_RECEIPTS.json  IST_WORKFLOW_GOVERNOR_GATE_LEDGER.md  IST_WORKFLOW_GOVERNOR_STAGE_AGENT_AUDIT.md  (+89 more)
(+3275 files in other folders)
